--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "id3-py_1.2.tar.bz2:"	02e700a4a15b407c13eba54a01f573769c60c945
+  id3-py_1.2.tar.bz2: 02e700a4a15b407c13eba54a01f573769c60c945
